# polyaxon-k8s

./: .travis.yml  README.md  requirements-dev.txt  requirements-test.txt  setup.cfg  setup.py
polyaxon_k8s/: constants.py  exceptions.py  logger.py  manager.py
polyaxon_k8s/utils/: jobs.py  nodes.py
requirements/: requirements.txt
tests/: base.py  test_manager.py
