[metadata]
description-file = README.md

[isort]
line_length = 88
lines_between_types = 1
order_by_type = true
known_future_library = future,pies
indent = '    '
multi_line_output = 3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
default_section = FIRSTPARTY
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
